syntax = "proto3";

option csharp_namespace = "GrpcExample";

package example;

import "google/protobuf/timestamp.proto";

service GrpcExample {
  rpc GetGrpcExampleResponse (GrpcExampleRequest) returns (GrpcExampleResponse);
}

message GrpcExampleRequest {
  string message = 1;
}

message GrpcExampleResponse {
  string message = 1;
  google.protobuf.Timestamp modified = 2;
}
